fixed body spacing

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    padding: 5em 0 5em 0;
+    padding: 2.5em 0 2.5em 0;
 }
 
 /* 
